# medieval-tactics

./: ._.gitignore  ._cv04_tesla  .gitignore  AttackUnit.cpp  AttackUnit.h  BuildUnit.cpp  BuildUnit.h  Button.qml  CMakeLists.txt  Game.cpp  Game.h  Game.qml  Game.qml.autosave  GameContext.cpp  GameContext.h  GameOver.qml  GroundType.h  HealUnit.cpp  HealUnit.h  IQMLSerializable.h  Main.qml  Map.cpp  Map.h  Map.qml  MapObject.cpp  MapObject.h  MapObject.qml  Menu.qml  Menu.qml.autosave  Player.cpp  Player.h  Position.h  Shop.cpp  Shop.h  Shop.qml  Unit.cpp  Unit.h  Unit.qml  UnitControls.qml  UnitFactory.cpp  (+9 more)
cv01_maze/: ._cv01_maze.xcodeproj
cv01_maze/cv01_maze/: ._game.cpp  ._game.hpp  ._main.cpp  ._worm.cpp  ._worm.hpp  game.hpp  main.cpp  worm.cpp  worm.hpp
cv01_maze/cv01_maze.xcodeproj/: ._project.xcworkspace  project.pbxproj
cv01_maze/cv01_maze.xcodeproj/project.xcworkspace/xcuserdata/xkorcak.xcuserdatad/: UserInterfaceState.xcuserstate
cv02_word_football/: ._cv02_word_football.xcodeproj
cv02_word_football/cv02_word_football/: ._Dictionary.cpp  ._Dictionary.hpp  ._Game.cpp  ._Game.hpp  ._Word.cpp  ._Word.hpp  ._main.cpp  Game.cpp  Game.hpp  Word.hpp
cv02_word_football/cv02_word_football.xcodeproj/project.xcworkspace/xcuserdata/xkorcak.xcuserdatad/: UserInterfaceState.xcuserstate
cv03/: ._chat.txt  ._cv03.xcodeproj  chat.txt
cv03/cv03/: ._Chatbot.cpp  ._Chatbot.hpp  ._Conversation.cpp  ._Conversation.hpp  ._Loader.cpp  ._Loader.hpp  ._main.cpp  Chatbot.cpp  Conversation.cpp  Conversation.hpp  Loader.cpp  main.cpp
cv03/cv03.xcodeproj/: ._project.xcworkspace  project.pbxproj
cv03/cv03.xcodeproj/project.xcworkspace/xcuserdata/xkorcak.xcuserdatad/: UserInterfaceState.xcuserstate
cv03/cv03.xcodeproj/xcshareddata/xcschemes/: cv03.xcscheme
cv03/cv03.xcodeproj/xcuserdata/xkorcak.xcuserdatad/xcschemes/: xcschememanagement.plist
cv04_tesla/: ._Maze  ._Maze.xcodeproj
cv04_tesla/Maze/: ._Game.cpp  ._Game.h  ._Map.cpp  ._Map.h  ._MapTest.cpp  ._MapTest.hpp  ._Position.h  ._Tesla.cpp  ._Tesla.h  ._TestSuite  ._main.cpp  Game.cpp  Game.h  Map.cpp  Position.h  Tesla.cpp  Tesla.h
cv04_tesla/Maze.xcodeproj/: ._project.xcworkspace
cv04_tesla/Maze.xcodeproj/project.xcworkspace/: ._contents.xcworkspacedata  ._xcshareddata
cv04_tesla/Maze.xcodeproj/project.xcworkspace/xcshareddata/: ._IDEWorkspaceChecks.plist
cv04_tesla/Maze/TestSuite/: ._Suite.cpp  ._Suite.h  ._Test.cpp  ._Test.h
cv06_store/cv06_store/: Store.cpp  Store.h  StoreTest.cpp  main.cpp
cv07_mars_rover/: Header.h
cv07_mars_rover/cv07_mars_rover/: .smbdeleteAAA56f837e  main.cpp
cv07_mars_rover/cv07_mars_rover/materials/: Concrete.h  Ice.h  Soil.h
cv07_mars_rover/cv07_mars_rover/tests/: RoverTest.cpp  RoverTest.hpp
exercises/cv01_maze/cv01_maze/: game.cpp
exercises/cv02_word_football/cv02_word_football/: Dictionary.cpp  Dictionary.hpp  Word.cpp  main.cpp
exercises/cv02_word_football/cv02_word_football.xcodeproj/: project.pbxproj
exercises/cv03/cv03/: Conversation.cpp  main.cpp
exercises/cv04_tesla/Maze/: Map.h  MapTest.cpp  MapTest.hpp
exercises/cv04_tesla/Maze.xcodeproj/: project.pbxproj
exercises/cv06_store/cv06_store/: Order.h  StoreTest.hpp
exercises/cv06_store/cv06_store.xcodeproj/: project.pbxproj
exercises/cv07_mars_rover/cv07_mars_rover/: Rover.h
exercises/cv07_mars_rover/cv07_mars_rover.xcodeproj/: project.pbxproj
exercises/cv07_mars_rover/cv07_mars_rover/materials/: Water.h
medieval-tactics/: CMakeLists.txt  main.cpp
medieval_tactics/: CMakeLists.txt
(+8 files in other folders)
